K8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-dashboard
  labels:
    app: admin-dashboard
    tier: fronend
  namespace: dev-env
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  selector:
    matchLabels:
      app: admin-dashboard

  template:
    metadata:
      labels:
        app: admin-dashboard
    spec:
     containers:
      - name: admin-dashboard
        image: "209992271656.dkr.ecr.eu-west-2.amazonaws.com/vozze-admin-dashboard"
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: admin-dashboard-svc
  namespace: dev-env
  labels:
    app: admin-dashboard
spec:
  type: NodePort
  selector:
    app: admin-dashboard
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-dashboard
  namespace: dev-env
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/conditions.admin-dashboard-svc: |
      [{"field":"host-header","hostHeaderConfig":{"values":["vozze.com.ng"]}}]
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:209992271656:certificate/a9c2c2a9-f7c4-469d-a07d-46e9c1ff9470
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/subnets: 	subnet-0631d11852a989b6d, subnet-063683f3815aed4dd, subnet-0e76b6969148c183f
    alb.ingress.kubernetes.io/group.name: vozze-test
    alb.ingress.kubernetes.io/ssl-redirect: '443' 
    
spec:
  rules:
    - host: "vozze.com.ng"
    - http: 
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name:  admin-dashboard-svc
              port:
                number: 3000
